# mcu-ui

./: README.md
_conf/: build.txt  crontab  nginx
_nginx-tools/: buildutils.sh  geoupdater.cpp  spawn.cpp  spawn.db
src/: CMakeLists.txt  _src.cmake  base.cpp  base.hpp  basewidget.cpp  basewidget.hpp  captcha.cpp  captcha.hpp  cgienv.cpp  cgienv.hpp  cgiroot.cpp  cgiroot.hpp  dep-config.cmake  div.cpp  div.hpp  error.cpp  error.hpp  exception.cpp  exception.hpp  home.cpp  home.hpp  lang.cpp  lang.hpp  login.cpp  login.hpp  main.cpp  participant.cpp  participant.hpp  participantlayoutcell.cpp  participantlayoutcell.hpp  system.cpp  system.hpp  tmconferencemanagement.cpp  tmconferencemanagement.hpp  tmconferencemanagementsmconferencelist.cpp  tmconferencemanagementsmconferencelist.hpp  tmconferencemanagementsmcreateconference.cpp  tmconferencemanagementsmcreateconference.hpp  tmconferencemanagementsmtemplates.cpp  tmconferencemanagementsmtemplates.hpp  (+40 more)
src/ipc/: ZeroHelper.hpp  addparticipantcommand.cpp  addparticipantcommand.h  addparticipanttoaddressbookcommand.cpp  addparticipanttoaddressbookcommand.hpp  basecommand.cpp  basecommand.h  callparticipant.h  callparticipantcommand.cpp  callparticipantcommand.h  command.cpp  command.h  createconferencecommand.cpp  createconferencecommand.h  getcontactscommand.cpp  getcontactscommand.hpp  hangupparticipantcommand.cpp  hangupparticipantcommand.h  logincommand.cpp  logincommand.h  removeparticipantcommand.cpp  removeparticipantcommand.h  setconferencelayoutcommand.cpp  setconferencelayoutcommand.hpp  setmanagercommand.cpp  setmanagercommand.hpp  setparticipantlayoutslotcommand.cpp  setparticipantlayoutslotcommand.hpp  setparticipantsoundreceptioncommand.cpp  setparticipantsoundreceptioncommand.hpp  setparticipantsoundtransmissioncommand.cpp  setparticipantsoundtransmissioncommand.hpp  setparticipantvideoreceptioncommand.cpp  setparticipantvideoreceptioncommand.hpp  setparticipantvideotransmissioncommand.cpp  setparticipantvideotransmissioncommand.hpp  setpaticipantvolumecommand.cpp  setpaticipantvolumecommand.h  setspeakercommand.cpp  setspeakercommand.hpp  (+2 more)
src/ipc/rapidxml/: basecommand.cpp  basecommand.h  createconferencecommand.cpp  createconferencecommand.h
www/: home-ltr.css  home-rtl.css  home.css
